# Tyche

./: README.md  main.py  pyproject.toml
modules/: __init__.py  malleable_parser.py  profile_generator.py  profile_linter.py  toml_converter.py
profiles/: jquery-c2.3.14.profile.json
templates/: example.toml  jquery2.4.9.toml
tyche/: main.py
tyche/modules/: __init__.py  malleable_parser.py  profile_generator.py  profile_linter.py  rewrite_generator.py
tyche/profiles/: jquery-c2.3.14.profile.json  jquery2.4.9.json  jquery2.4.9.toml.json
tyche_cli/: __init__.py  cli.py
tyche_cli/modules/: __init__.py  burp_parser.py  malleable_parser.py  profile_generator.py  profile_linter.py
