[project]
name = "tyche"
version = "0.1.0"
description = "Mythic HTTPX Profile Generator - Convert Burpsuite requests and TOML files to HTTPX profiles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0"
]

[project.scripts]
tyche = "tyche_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tyche_cli"]
