[project]
name = "tyche"
version = "0.1.1"
description = "Mythic HTTPX Profile Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0"
]

[project.scripts]
tyche = "tyche.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tyche"]
